--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
         .profile-container {
             position: relative;
-            width: 350px;
-            height: 350px;
+            width: 330px;
+            height: 330px;
             border-radius: 50%;
             background: linear-gradient(45deg, var(--primary), var(--secondary));
-            padding: 8px;
+            padding: 5px;
             animation: float 6s ease-in-out infinite;
             filter: drop-shadow(var(--neon-glow));
         }
@@ -78,7 +78,7 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            border: 4px solid var(--dark);
+            border: 3px solid var(--dark);
             transition: transform 0.3s ease;
         }
 
@@ -415,8 +415,8 @@
             </div>
             <div class="skill-card reveal">
                 <i class="fas fa-shield-alt skill-icon"></i>
-                <h3>Vulnerability Assessment</h3>
-                <p>NMAP • Nessus • OSINT</p>
+                <h3>Open-source intelligence</h3>
+                <p>OSINT Tools • Browsering Seach Engines • Presentations</p>
             </div>
             <!-- Add more skill cards -->
         </div>
@@ -437,21 +437,11 @@
             </div>
             <div class="timeline-item reveal">
                 <div class="timeline-content">
-                    <h3>DRDL - DRDO</h3>
-                    <p>Cybersecurity & Networking Intern</p>
+                    <h3>Telangana Cyber Security Bureau</h3>
+                    <p>Cybersecurity Intern</p>
                     <ul>
-                        <li>Helped Optimizing network security for 100+ devices</li>
-                        <li>Automated Day-to-Day System Scanning</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="timeline-item reveal">
-                <div class="timeline-content">
-                    <h3>DRDL - DRDO</h3>
-                    <p>Cybersecurity & Networking Intern</p>
-                    <ul>
-                        <li>Helped Optimizing network security for 100+ devices</li>
-                        <li>Automated Day-to-Day System Scanning</li>
+                        <li>Help in Open-source intelligence(OSINT)</li>
+                        <li>Got Insight on Cyber Crimes in Day-to-Day Life </li>
                     </ul>
                 </div>
             </div>
@@ -462,7 +452,7 @@
     <!-- Contact Section -->
     <section class="contact-section">
         <div class="container">
-            <h2 class="reveal">Secure Your Digital Assets</h2>
+            <h2 class="reveal">Keep The Learning Fire Burning</h2>
             <div class="social-links">
                 <a href="#" class="social-link reveal"><i class="fab fa-linkedin"></i></a>
                 <a href="#" class="social-link reveal"><i class="fab fa-github"></i></a>
