--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
     <!-- Contact Section -->
     <section class="contact-section">
         <div class="container">
-            <h2 class="reveal">Keep The Learning Fire Burning</h2>
+            <h2 class="reveal">Keep The Learning Fire Burning 🔥</h2>
             <div class="social-links">
                 <a href="#" class="social-link reveal"><i class="fab fa-linkedin"></i></a>
                 <a href="#" class="social-link reveal"><i class="fab fa-github"></i></a>
