--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <div class="hero-text">
                 <p class="tagline reveal active">Cyber Security Analyst</p>
                 <h1 class="name reveal active">M.S. Tahameer</h1>
-                <p class="bio reveal active">Fortifying digital ecosystems through advanced threat intelligence and proactive defense strategies.</p>
+                <p class="bio reveal active"> “Hackers rarely have full knowledge of the technology stack of a target.” — John McAfee</p>
             </div>
         </div>
     </section>
