--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <div class="project-card reveal">
                 <div class="project-content">
                     <h3>USB Rubber Ducky Project</h3>
-                    <p>Advanced penetration testing toolkit demonstrating wireless network vulnerabilities</p>
+                    <p>Advanced penetration testing toolkit demonstrating USB Attacks</p>
                     <div class="tech-stack">
                         <span>Ducky Script</span>
                         <span>Webhooks</span>
