--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             <div class="skill-card reveal">
                 <i class="fas fa-shield-alt skill-icon"></i>
                 <h3>Vulnerability Assessment</h3>
-                <p>NMAP • Nessus • OSINT</p>
+                <p>NMAP • Nessus • Burp Suite</p>
             </div>
             <div class="skill-card reveal">
                 <i class="fas fa-shield-alt skill-icon"></i>
