--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <?php
 if(isset($_GET['redirect'])) {
-    header("Location: C:\Users\mstha\OneDrive\Desktop\MSTahameer.github.io\image1.jpg");
+    header("Location: https://imgs.search.brave.com/szMVyHZa7wjFKBCyvUqVjsVPQDSNi8XrR7KDObG8f_U/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJjYXQuY29t/L3cvZnVsbC8wL2Yv/MS81ODE5MTUwLTEw/ODB4MTkyMC1pcGhv/bmUtaGQtZG9udC10/b3VjaC1teS1waG9u/ZS13YWxscGFwZXIt/aW1hZ2UuanBn");
     exit();
 }
 ?>
